[package]
name = "libgo"
version = "0.5.0"
authors = ["David Campbell <dcampbell24@gmail.com>"]
edition = "2021"
rust-version = "1.62.1"

description = "Basic Go library that implements the Go Text Protocol."
repository = "https://github.com/dcampbell24/libgo"
readme = "README.md"
keywords = ["go", "baduk", "weiqi"]
categories = ["games"]
license = "MIT"

[dependencies]
rand = "0.8"

[dev-dependencies]
clap = "2"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false