[package]
name = "libgo"
version = "0.5.0"
edition = "2021"
rust-version = "1.65"

description = "Basic Go library that implements the Go Text Protocol."
repository = "https://github.com/dcampbell24/libgo"
readme = "README.md"
keywords = ["go", "baduk", "weiqi"]
categories = ["games"]
license = "MIT"

[dependencies]
rand = "0.8"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }

[lints.clippy]
cargo = "warn"
pedantic = "warn"

multiple_crate_versions = { level = "allow", priority = 1 }

[[bench]]
name = "benchmarks"
harness = false